--- a/Web4/BlendedAPI/vyzva/Views/_pageTemplate.html
+++ b/Web4/BlendedAPI/vyzva/Views/_pageTemplate.html
@@ -87,7 +87,7 @@
 
 <script type="text/ng-template" id="vyzva$common$whenproblem.html">
   Využijte též stránky
-  <span class="a" ng-click="copyrNavigateFaq()">často kladené dotazy</span> nebo nám vaše náměty či připomínky
+  <span class="a" ng-click="copyrNavigateFaq()">Často kladené dotazy (FAQ)</span> nebo nám vaše náměty či připomínky
   <span class="a" ng-click="copyrShowWriteUs()">napište</span>.
 </script>
 
