--- a/Web4/BlendedAPI/vyzva/Views/exercise.html
+++ b/Web4/BlendedAPI/vyzva/Views/exercise.html
@@ -126,13 +126,13 @@
       <div class="help-close" ng-click="exercisehelpteacher.collapseToogle()"><i class="fa fa-times"></i></div>
       Postupujte následovně<br />
       <ol>
-        <li>Ohodnoťte nahrávky <i>Studenta</i> v testu, pokud ovšem něco nahrál (na poslední stránce, označené v navigaci ikonou <i class="fa fa-question"></i>)</li>
-        <li>Na základě celkového skóre <i>Studenta</i> pak rozhodněte, zdali může ve výuce dále pokračovat nebo ne</li>
+        <li>Ohodnoťte nahrávky <i>Studenta</i> v testu, pokud ovšem něco nahrál (na poslední stránce, označené v navigaci ikonou <i class="fa fa-question"></i>).</li>
+        <li>Na základě celkového skóre <i>Studenta</i> pak rozhodněte, zdali může ve výuce dále pokračovat nebo ne.</li>
       </ol>
       Poznámky:
       <ul>
         <li>pokud <i>Student</i> dosáhl skóre alespoň 65% v automaticky vyhodnotitelných cvičeních, bude mu umožněno pokračovat ve studiu do doby, než rozhodnete o dalším postupu.</li>
-        <li>pokud je z dosavadního skóre zřejmé, že <i>Student</i> test určitě nesplnil, pak nemá význam hodnotit jeho nahrávky.</li>
+        <li>pokud je z dosavadního skóre zřejmé, že <i>Student</i> test nesplnil, pak nemá význam hodnotit jeho nahrávky.</li>
       </ul>
       <div class="when-problem lm-top-margin" vyzva$common$whenproblem></div>
     </div>
