--- a/Web4/BlendedAPI/vyzva/Views/home.html
+++ b/Web4/BlendedAPI/vyzva/Views/home.html
@@ -73,7 +73,7 @@
           <li>u hotových testů ohodnotit mluvený projev <i>Studenta</i> (cvičení s mluveným projevem je vždy poslední cvičení testu)</li>
           <li>u hotových testů rozhodnout o možnosti pokračovat ve výuce</li>
           <li>dát <i>Studentovi</i> k zopakování každou hotovou lekci nebo test</li>
-          <li>u <i>Rozřazovacího testu</i> změnit jazykovou úrovně kurzu nebo dát <i>Studentovi</i> k zopakování celý <i>Rozřazovací test</i></li>
+          <li>u <i>Rozřazovacího testu</i> změnit jazykovou úroveň kurzu nebo dát <i>Studentovi</i> k zopakování celý <i>Rozřazovací test</i></li>
         </ul>
       </div>
     </div>
@@ -109,9 +109,9 @@
       <div class="col-sm-6">
         <h4>Podrobnější vysvětlení:</h4>
         <ul>
-          <li>Studium zahájíte spuštěním <i>Rozřazovacího testu</i>. Po jeho ukončení se vám zpřístupní kurz vhodné jazykové úrovně.</li>
-          <li>Kurz je rozdělen na Studijní bloky - první Studijní blok studujete po splnění <i>Vstupního testu</i>, další Studijní bloky po ukončení předchozího Studijního bloku a úspěšném absolvování kontrolního testu.</li>
-          <li>Každý Studijní blok je ukončen Kontrolním testem. Poslední Studijní blok je ukončen Závěrečným testem, jehož úspěšným splněním ukončíte celý kurz</li>
+          <li>Studium zahájíte spuštěním <i>Rozřazovacího testu</i>. Po jeho ukončení se vám zpřístupní kurz odpovídající jazykové úrovně.</li>
+          <li>Kurz je rozdělen na Studijní bloky - první Studijní blok studujete po splnění <i>Vstupního testu</i>, další Studijní bloky po ukončení předchozího Studijního bloku a úspěšném absolvování <i>Kontrolního testu</i>.</li>
+          <li>Po každém Studijním bloku následuje Kontrolní test. Po posledním Studijním bloku následuje <i>Závěrečný test</i>, jehož úspěšným splněním ukončíte celý kurz.</li>
         </ul>
       </div>
     </div>
