--- a/Web4/BlendedAPI/vyzva/Views/lector.html
+++ b/Web4/BlendedAPI/vyzva/Views/lector.html
@@ -21,7 +21,7 @@
           </li>
           <li>
             Po zadání <i>Licenčního klíče</i> <i>Studentem</i>:<br />
-            - bude <i>Student</i> moci spustit kurz<br />
+            - bude <i>Student</i> moci spustit kurz,<br />
             - údaje o <i>Studentovi</i> (Jméno, Příjmení, EMail) se objeví v tabulce níže.
           </li>
           <li>
@@ -34,17 +34,17 @@
         <h4>Řízení výuky</h4>
         U zvoleného <i>Studenta</i> klikněte na <b>Výsledky</b>. To vám umožní:
         <ul>
-          <li>prohlížet výsledky práce <i>Studenta</i>, tj. skóre v jednotlivých cvičeních, včetně chyb, které <i>Student</i> udělal</li>
-          <li>poslouchat nahrávky <i>Studentů</i> v rámci audio-orální metody</li>
-          <li>ohodnotit kvalitu mluveného projevu <i>Studentů</i> v kontrolních testech, včetně vstupního a závěrečného</li>
-          <li>změnit jazykovou úroveň kurzu, který <i>Student</i> studuje, tj. A1, A2, B1 nebo B2</li>
-          <li>řídit <i>Studentův</i> průchod kurzem, tj. <b>Povolit</b>/<b>Nepovolit</b> pokračování v kurzu po absolvování testu a umožnit opakování nepovedené lekce</li>
+          <li>prohlížet výsledky práce <i>Studenta</i>, tj. skóre v jednotlivých cvičeních, včetně chyb, které <i>Student</i> udělal,</li>
+          <li>poslouchat nahrávky <i>Studentů</i> v rámci audio-orální metody,</li>
+          <li>ohodnotit kvalitu mluveného projevu <i>Studentů</i> v kontrolních testech, včetně vstupního a závěrečného,</li>
+          <li>změnit jazykovou úroveň kurzu, který <i>Student</i> studuje, tj. A1, A2, B1 nebo B2,</li>
+          <li>řídit <i>Studentův</i> průchod kurzem, tj. <b>Povolit</b>/<b>Nepovolit</b> pokračování v kurzu po absolvování testu a umožnit opakování nepovedené lekce,</li>
           <li>mít přehled o čase, který <i>Student</i> strávil poslechem nahrávek rodilých mluvčích, o množství jím nahraného zvuku apod.</li>
         </ul>
-        <h4 class="lm-top-margin">Exporty do excelu</h4>
+        <h4 class="lm-top-margin">Exporty do Excelu</h4>
         <p>
-          Využijte exportů do Excelu k získání mnoha zajímavých údajů o výuce<br />
-          <b>Poznámka: </b> exporty mají význam pouze tehdy, pokud již ve vaší <i>Studijní skupině</i> započala výuka.
+          Využijte exportů do Excelu k získání mnoha zajímavých údajů o výuce.<br />
+          <b>Poznámka: </b> Exporty mají význam pouze tehdy, pokud již ve vaší <i>Studijní skupině</i> započala výuka.
         </p>
       </div>
     </div>
@@ -55,14 +55,14 @@
 <div class="alert help-panel help-default export-table" collapsablemanager="lectorhelpreports">
   <div class="h3 help-header" ng-click="lectorhelpreports.collapseToogle()">
     <div class="more fa fa-bars"></div>
-    Exporty do excelu
+    Exporty do Excelu
   </div>
   <div class="help-content" collapse="lectorhelpreports.isCollapsed">
     <div class="help-close" ng-click="lectorhelpreports.collapseToogle()"><i class="fa fa-times"></i></div>
     <div class="row">
       <div class="col-sm-6">
         <div class="btn btn-success btn-lg" ng-click="::ts.downloadLicenceKeys()"><i class="fa fa-file-excel-o"></i> Seznam studentů do Excelu</div><br />
-        Tento export obsahuje přehled Studijních skupin včetně seznamu <i>Studentů</i> jednotlivých Studijních skupin a jejich klíčů. Využijte jej pro snazší rozdání <i>Licenčních klíčů</i> studentům.
+        Tento export obsahuje přehled <i>Studijních skupin</i> včetně seznamu <i>Studentů</i> jednotlivých Studijních skupin a jejich klíčů. Využijte jej pro snazší rozdání <i>Licenčních klíčů</i> <i>Studentům</i>.
       </div>
       <div class="col-sm-6">
         <div class="btn btn-success btn-lg" ng-click="::ts.downloadSummary()"><i class="fa fa-file-excel-o"></i> Průběžné výsledky studia</div><br />
