--- a/Web4/BlendedAPI/vyzva/Views/FAQ.html
+++ b/Web4/BlendedAPI/vyzva/Views/FAQ.html
@@ -1,4 +1,4 @@
-﻿<div vyzva$common$backheader title="Často kladené dotazy" class="container-fluid topbar"></div>
+﻿<div vyzva$common$backheader title="Často kladené dotazy (FAQ)" class="container-fluid topbar"></div>
 <div class="clearfix lm-bottom-margin"></div>
 
 <!--<div class="container-fluid topbar">
@@ -15,25 +15,25 @@
   <!--<vyzva$faq$toc></vyzva$faq$toc>-->
 
   <h3>Dotazy Studentů</h3>
-  <vyzva$faq$item type="Student" title="Nemohu pokračovat ve studiu, protože nemám dostupné tlačítko Spustit u žádné lekce ani testu">
-    Pravděpodobně jste dokončil/dokončila <i>Vstupní test</i> nebo <b>Kontrolní test</b> a test čeká na ohodnocení <i>Učitelem</i>.
+  <vyzva$faq$item type="Student" title="Nemohu pokračovat ve studiu, protože nemám dostupné tlačítko Spustit u žádné lekce ani testu.">
+    Pravděpodobně jste ve <i>Vstupním</i> nebo <i>Kontrolním testu</i> nedosáhl(a) potřebného skóre. Musíte počkat, dokud <i>Učitel</i> nerozhodne o dalším postupu.
   </vyzva$faq$item>
   <vyzva$faq$item type="Student" title="Nefunguje mi přehrávání nebo nahrávání zvuku, co mám dělat?">
     Před spuštěním výuky máte možnost spustit kontrolu přehrávání a nahrávání zvuku. Pokud se test z nějakého důvodu nezdaří, zkontrolujte zejména následující:
     <ul>
-      <li>Při dotazu na povolení sdílení mikrofonu jste zvolili ano.</li>
+      <li>Zda jste při dotazu na povolení sdílení mikrofonu zvolili <b>ano</a>.</li>
       <li>Zda máte správně nastavenou hlasitost přehrávání.</li>
       <li>Zda máte mikrofon povolený v nastavení počítače.</li>
       <li>Zda vám přehrávání a nahrávání zvuku funguje v ostatních aplikacích.</li>
     </ul>
-    Pokud žádná z výše uvedených rad nepomůže, obraťte se na svého správce počítače.
+    Pokud žádná z výše uvedených rad nepomůže, obraťte se na správce počítačů ve Vaší škole.
   </vyzva$faq$item>
 
   <h3>Dotazy Učitelů</h3>
-  <vyzva$faq$item type="Učitel" title="student zadal licenční klíc a já jeho jméno nevidím v seznamu">
-    <i>Student</i> musí nejenom zadat licenční klíč ale i spustit kurz. Také zkuste provést obnovu stránky (klávesa F5) nebo vypněte a zapněte prohlížeč.
+  <vyzva$faq$item type="Učitel" title="Student zadal licenční klíc a já jeho jméno nevidím v seznamu.">
+    <i>Student</i> musí nejen zadat licenční klíč, ale i spustit kurz. Také můžete zkusit provést obnovu stránky (klávesa F5) nebo vypněte a zapněte prohlížeč.
   </vyzva$faq$item>
-  <vyzva$faq$item type="Učitel" title="mohu pro danou skupinu přidělit jen jeden klíč pro Učitele a další až v případě potřeby?">
+  <vyzva$faq$item type="Učitel" title="Mohu pro danou skupinu přidělit jen jeden klíč pro Učitele a další až v případě potřeby?">
     Ano, samozřejmě.
   </vyzva$faq$item>
 
