--- a/Blended/app/styles.less
+++ b/Blended/app/styles.less
@@ -16,6 +16,8 @@
   #gradient > .horizontal-three-colors(darken(@panel-primary-heading-bg,40); @panel-primary-heading-bg; 15%; darken(@panel-primary-heading-bg,30));
   border: 0;
 
+  table * {color:#333;}
+
   h1 {
     margin: 0;
   }
