--- a/Web4/BlendedAPI/vyzva/Views/FAQ.html
+++ b/Web4/BlendedAPI/vyzva/Views/FAQ.html
@@ -15,13 +15,20 @@
   <!--<vyzva$faq$toc></vyzva$faq$toc>-->
 
   <h3>Dotazy Studentů</h3>
+  <vyzva$faq$item type="Student" title="Učitel mi vyhodnotil test a já jej ve svém webovém prohlížeči vidím stále nevyhodnocený.">
+    V tomto případě pomůže stisknout klávesu <b class="text-danger">F5</b><br />
+    Váš webový prohlížeč tak ověří, zdali se něco od posledního jeho spuštění nezměnilo. 
+  </vyzva$faq$item>
+
   <vyzva$faq$item type="Student" title="Nemohu pokračovat ve studiu, protože nemám dostupné tlačítko Spustit u žádné lekce ani testu.">
     Pravděpodobně jste ve <i>Vstupním</i> nebo <i>Kontrolním testu</i> nedosáhl(a) potřebného skóre. Musíte počkat, dokud <i>Učitel</i> nerozhodne o dalším postupu.
   </vyzva$faq$item>
+
   <vyzva$faq$item type="Student" title="Nefunguje mi přehrávání nebo nahrávání zvuku, co mám dělat?">
-    Před spuštěním výuky máte možnost spustit kontrolu přehrávání a nahrávání zvuku. Pokud se test z nějakého důvodu nezdaří, zkontrolujte zejména následující:
+    Před spuštěním výuky máte možnost spustit kontrolu přehrávání a nahrávání zvuku. Pokud se kontrola z nějakého důvodu nezdaří, 
+    ověřte zejména následující:
     <ul>
-      <li>Zda jste při dotazu na povolení sdílení mikrofonu zvolili <b>ano</a>.</li>
+      <li>Zda jste při dotazu na povolení sdílení mikrofonu zvolili <b>ano</b>.</li>
       <li>Zda máte správně nastavenou hlasitost přehrávání.</li>
       <li>Zda máte mikrofon povolený v nastavení počítače.</li>
       <li>Zda vám přehrávání a nahrávání zvuku funguje v ostatních aplikacích.</li>
@@ -30,6 +37,12 @@
   </vyzva$faq$item>
 
   <h3>Dotazy Učitelů</h3>
+  <vyzva$faq$item type="Učitel" title="Student dokončil test, ale já v jeho výsledních vidím jeho test stále nedokončený.">
+    V tomto případě pomůže stisknout klávesu <b class="text-danger">F5</b><br />
+    Váš webový prohlížeč tak ověří, zdali se něco od posledního jeho spuštění nezměnilo.
+  </vyzva$faq$item>
+
+
   <vyzva$faq$item type="Učitel" title="Student zadal licenční klíc a já jeho jméno nevidím v seznamu.">
     <i>Student</i> musí nejen zadat licenční klíč, ale i spustit kurz. Také můžete zkusit provést obnovu stránky (klávesa F5) nebo vypněte a zapněte prohlížeč.
   </vyzva$faq$item>
