--- a/Web4/BlendedAPI/vyzva/Views/managerLangmaster.html
+++ b/Web4/BlendedAPI/vyzva/Views/managerLangmaster.html
@@ -15,11 +15,13 @@
   <hr />
   <h4 class="text-danger">PROVOZ</h4>
   <br />
+  <p>Přístup do výukového systému pro ostrý provoz</p>
+  <hr/>
   <p>
-    Dobrý den paní pane XXX,
+    Dobrý den,
   </p>
   <p>
-    Děkujeme, že jste si vybrali náš systém výuky.<br />
+    děkujeme, že jste si vybrali náš systém výuky.<br />
     Veškeré informace, spojené s rozběhnutím ostrého provozu na Vaší škole <a href="{{ts.vyzvaProvoz()}}"><b>naleznete kliknutím zde</b></a>.
   </p>
   <p>
@@ -39,7 +41,20 @@
   <h4 class="text-danger">DEMO</h4>
   <br />
   <p>
-    Doporučujeme <a href="{{ts.encodetitle()}}"><b>vyzkoušet si hlavní funkce naší aplikace zde</b></a>.
+    Dobrý den,
+  </p>
+  <p>
+    děkujeme za Váš zájem.
+  </p>
+  <p>
+    Hlavní funkce naší aplikace si můžete <a href="{{ts.encodetitle()}}"><b>vyzkoušet kliknutím na tento odkaz</b></a>.
+  </p>
+  <p>
+    S pozdravem,<br/> 
+    Radek Jeliga<br/> 
+    Projektový manažer<br/> 
+    <a href="http://vyzva57.langmaster.cz">vyzva57.langmaster.cz</a><br/>
+    tel. 604 147 031
   </p>
   <br />
   <hr />
